[gd_scene load_steps=9 format=3 uid="uid://bdwruyk6h1m2k"]

[ext_resource type="Script" path="res://scripts/explosion.gd" id="1_2n5sa"]
[ext_resource type="Texture2D" uid="uid://ch1fvstqxmr58" path="res://textures/explosion.png" id="1_8g0tm"]
[ext_resource type="Texture2D" uid="uid://bw5tlg1rtm0hy" path="res://textures/explosion-sparks.png" id="2_3fd1s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1jl2y"]
transparency = 1
shading_mode = 0
diffuse_mode = 3
disable_ambient_light = true
disable_fog = true
albedo_texture = ExtResource("2_3fd1s")
billboard_mode = 3
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jovx6"]
angle_min = -232.0
angle_max = 336.0
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
angular_velocity_min = 90.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
color = Color(1, 0.870588, 0.737255, 1)
hue_variation_min = 0.06
hue_variation_max = 0.2
anim_offset_max = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_eoy2u"]
size = Vector2(5, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uku5h"]
transparency = 1
shading_mode = 0
diffuse_mode = 3
specular_mode = 2
disable_ambient_light = true
disable_fog = true
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("1_8g0tm")
billboard_mode = 3
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_ty3r7"]
resource_local_to_scene = true
size = Vector2(5, 5)
subdivide_width = 10
subdivide_depth = 10

[node name="Explosion" type="Node3D"]
script = ExtResource("1_2n5sa")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_1jl2y")
lifetime = 0.15
speed_scale = 1.85
process_material = SubResource("ParticleProcessMaterial_jovx6")
draw_pass_1 = SubResource("QuadMesh_eoy2u")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_uku5h")
lifetime = 0.26
speed_scale = 2.63
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_jovx6")
draw_pass_1 = SubResource("QuadMesh_ty3r7")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
